--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@ img {
   margin-right: auto;
 }
 
-nav > a {
+nav {
   text-align: center;
-  padding: 10px;
-  background: grey;
 }
 
 figcaption {
