--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ figcaption {
 #details > div {
   display: block;
   float: left;
+  background-color: red;
   text-align: center;
   width: 25%;
 }
